cvs/ports/x11/kde4/marble/patches/patch-src_CMakeLists_txt,v
head	1.4;
access;
symbols
	OPENBSD_6_1:1.4.0.10
	OPENBSD_6_1_BASE:1.4
	OPENBSD_6_0:1.4.0.8
	OPENBSD_6_0_BASE:1.4
	OPENBSD_5_9:1.4.0.4
	OPENBSD_5_9_BASE:1.4
	OPENBSD_5_8:1.4.0.6
	OPENBSD_5_8_BASE:1.4
	OPENBSD_5_7:1.4.0.2
	OPENBSD_5_7_BASE:1.4
	OPENBSD_5_6:1.3.0.2
	OPENBSD_5_6_BASE:1.3
	OPENBSD_5_5:1.2.0.2
	OPENBSD_5_5_BASE:1.2
	OPENBSD_5_4:1.1.0.2
	OPENBSD_5_4_BASE:1.1;
locks; strict;
comment	@# @;


1.4
date	2015.01.05.22.30.54;	author dcoppa;	state Exp;
branches;
next	1.3;
commitid	uCZTgHuOfGU721ws;

1.3
date	2014.07.09.20.03.29;	author zhuk;	state Exp;
branches;
next	1.2;
commitid	VIGhneE7m6586cHK;

1.2
date	2013.12.08.19.13.33;	author zhuk;	state Exp;
branches;
next	1.1;

1.1
date	2013.05.21.06.24.30;	author zhuk;	state Exp;
branches;
next	;


desc
@@


1.4
log
@
Fix for the following error:

<command-line>:0:13: warning: missing terminating " character [enabled by default]
/usr/ports/pobj/marble-4.14.2/marble-4.14.2/tests/TestGeoDataWriter.cpp:52:5: error: stray '\' in program
     dataDir = QDir( TESTSRCDIR );
     ^
/usr/ports/pobj/marble-4.14.2/marble-4.14.2/tests/TestGeoDataWriter.cpp:52:5: error: missing terminating " character

...And regen patches while here.
@
text
@$OpenBSD: patch-src_CMakeLists_txt,v 1.3 2014/07/09 20:03:29 zhuk Exp $
--- src/CMakeLists.txt.ports.orig	Mon Oct  6 00:35:01 2014
+++ src/CMakeLists.txt	Mon Jan  5 16:23:32 2015
@@@@ -99,7 +99,7 @@@@ if (QTONLY)
   # ce: don't know why this is needed here - on win32 
   # 'O2' is activated by default in release mode
   if(NOT WIN32)
-    add_definitions (${QT_DEFINITIONS} -O3)
+    add_definitions (${QT_DEFINITIONS})
   endif(NOT WIN32)
 
   include_directories(
@@@@ -107,7 +107,7 @@@@ if (QTONLY)
   )
 else (QTONLY)
   if(NOT WIN32)
-    add_definitions (${QT_DEFINITIONS} ${KDE4_DEFINITIONS} -O3) 
+    add_definitions (${QT_DEFINITIONS} ${KDE4_DEFINITIONS}) 
   endif(NOT WIN32)
 
   include_directories(
@


1.3
log
@"small update" (c) tedu@@

Here KDE 4.13.2 comes. Big release changelogs could be read here:

  http://www.kde.org/announcements/4.12/
  http://www.kde.org/announcements/4.13/

Critical things you should be aware of:

  1. Nepomuk is gone, it's superseeded by Baloo. Nepomuk libraries
     are still here, though, but they do rely on Baloo internally.

  2. kdnssd was renamed to zeroconf-ioslave;

  3. kwallet was renamed to kwalletmanager;

  4. Akonadi cache will be rebuilt; this could result in change
     of PIM folder indexes, which in turn could mess up your
     mail filters - beware.

  5. ... a lot of other little problems that always happen during
     update.

Things could be broken for a day or two in subtle ways - don't
hesistate on reporting them!
@
text
@d1 4
a4 4
$OpenBSD: patch-src_CMakeLists_txt,v 1.2 2013/12/08 19:13:33 zhuk Exp $
--- src/CMakeLists.txt.ports.orig	Thu Apr 24 12:03:29 2014
+++ src/CMakeLists.txt	Tue Jun  3 14:57:16 2014
@@@@ -96,7 +96,7 @@@@ if (QTONLY)
d13 1
a13 1
@@@@ -104,7 +104,7 @@@@ if (QTONLY)
@


1.2
log
@Move on to KDE 4.11.4.

In this release, four "fat" packages were split:

  * kdeadmin
  * kdenetwork
  * kdesdk
  * kdetoys

To make updates reliable, we provide corresponding meta-packages now.

Many new patches in x11/kde4 correspond to the linking problems detected.
Those are planned to integrate upstream but probably we'll have to keep
some of them until KDE 5.

For information about major KDE 4.11 features, look at the official site:
http://www.kde.org/announcements/4.11/

Kopete Jingle support is disabled for now, until googletalk-call gets
cured from permanent coredumping.

This update involved a lot of help and patience for my mistakes from
many people, including ajacoutot@@, espie@@, naddy@@... but most of the
times this was landry@@ who definitely deserves personal "thank you"!
@
text
@d1 4
a4 4
$OpenBSD: patch-src_CMakeLists_txt,v 1.1 2013/05/21 06:24:30 zhuk Exp $
--- src/CMakeLists.txt.ports.orig	Wed Aug 28 21:03:55 2013
+++ src/CMakeLists.txt	Thu Nov  7 17:10:08 2013
@@@@ -91,7 +91,7 @@@@ if (QTONLY)
d13 1
a13 1
@@@@ -99,7 +99,7 @@@@ if (QTONLY)
@


1.1
log
@Avoid using -O3 for compilation.

Noticed and initial patch provided by Juan Francisco Cantero Hurtado
on ports@@, thanks!
@
text
@d1 4
a4 4
$OpenBSD$
--- src/CMakeLists.txt.ports.orig	Tue May 21 10:15:55 2013
+++ src/CMakeLists.txt	Tue May 21 10:16:35 2013
@@@@ -92,7 +92,7 @@@@ if (QTONLY)
d13 1
a13 1
@@@@ -100,7 +100,7 @@@@ if (QTONLY)
@

